--- a/styles/15-bottom-nav.css
+++ b/styles/15-bottom-nav.css
@@ -12,7 +12,7 @@
 
     .is-standalone-pwa .bottom-nav {
       padding-top: 0;
-      padding-bottom: env(safe-area-inset-bottom, 0px);
+      padding-bottom: 0;
     }
 
     body.is-keyboard-open .bottom-nav {
